# stitchify

./: .gitignore  README.md  build_gui.sh  build_windows.py  pixelstitchifier-gui.spec  pixelstitchifier-test.spec  pixelstitchifier.spec  pixelstitchifier_gui.py  pixelstitchifier_main.py  pyproject.toml  requirements-dev.txt  stitchify  stitchify_main.py
.github/workflows/: build-release.yml
src/: __init__.py
src/pixelstitchifier/: __init__.py  __main__.py  color_processor.py  converter.py  dmc_matcher.py  image_loader.py  pattern_generator.py  symbol_mapper.py
src/stitchify/: __init__.py  __main__.py  art_converter.py  converter.py  image_loader.py  thread_db_integration.py
tests/: README.md  __init__.py  conftest.py  test_art_converter.py  test_color_processor.py  test_dmc_matcher.py  test_image_loader.py  test_integration.py  test_pattern_generator.py  test_symbol_mapper.py  test_thread_database.py
tests/integration/: test_integration.py
tests/unit/: test_art_converter.py  test_color_processor.py  test_dmc_matcher.py  test_image_loader.py  test_pattern_generator.py  test_symbol_mapper.py  test_thread_database.py
